Sort using Lambdas. Join using Lambda; `findFirst()` and `skip(1)`